Fix Task and Message components via TruncateMarkup

--- a/src/components/Home/Message/Message.module.sass
+++ b/src/components/Home/Message/Message.module.sass
@@ -15,6 +15,8 @@
 .title
   white-space: nowrap
   margin-bottom: 5px
+  overflow: hidden
+  text-overflow: ellipsis
 
 .name
   display: inline-block
@@ -25,10 +27,8 @@
   color: #8492af
 
 .desc
-  white-space: nowrap
   margin-bottom: 10px
-  text-overflow: ellipsis
-  overflow: hidden
+
 
 .icons
   display: flex
