--- a/src/components/Workflow/Task/Task.module.sass
+++ b/src/components/Workflow/Task/Task.module.sass
@@ -11,6 +11,7 @@
 .title
   font-size: 20px
   font-weight: 500
+  padding-right: 10px
 
 .status
   font-size: 14px
